Make sure page is not bigger than cropper

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
 .cropContainer .actions {
   position: relative;
   background-color: white;
-  bottom: 50px;
+  bottom: 100px;
 }
 
 .cropContainer .cropButton {
